<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_white"
    android:orientation="vertical">

    <include layout="@layout/layout_app_back_header"
        />

    <include layout="@layout/item_row_header_message_details"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:id="@+id/scrollViewTop"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.app.foxhopr.custom.view.BoldTextView
                style="@style/inbox_message_common_Textstyle"
                android:layout_marginRight="15dp"
                android:gravity="left"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/textviewsubjectValue"
                android:textSize="@dimen/comment_date_time_text_size"
                android:textColor="@color/black_color"
                />

            <com.app.foxhopr.custom.view.RegularTextView
                style="@style/inbox_message_common_Textstyle"
                android:layout_marginRight="15dp"
                android:gravity="left"
                android:id="@+id/textmessage"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="@dimen/comment_date_time_text_size"
                android:textColor="@color/gray_color"
                />


            <LinearLayout
                android:id="@+id/llFileLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                >

            </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/received_referral_common_Textstyle"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="@dimen/referrals_list_size"
                android:layout_height="@dimen/referrals_list_size"
                android:src="@drawable/icon_comment"
                />
            <com.app.foxhopr.custom.view.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black_color"
                android:textSize="@dimen/referrals_details_list_txt_textsize"
                android:text="@string/str_comment_message"
                />
        </LinearLayout>

        <View
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_separator"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/commentListView"
            android:layout_gravity="center_horizontal"
            android:divider="@color/bottom_tab_stip_color"
            android:dividerHeight="1dp"
            android:fadingEdge="none"
            android:background="@color/black_white"
            android:padding="10dp"
            android:stackFromBottom="true"
            android:visibility="invisible"
            />
        <com.app.foxhopr.custom.view.RegularTextView
            android:padding="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal"
            android:id="@+id/nocommentfound"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:minLines="2"
            android:visibility="gone"
            android:text="@string/not_comment"
            android:textSize="@dimen/comment_date_time_text_size"
            android:textColor="@color/light_gray_color"
            />

        <EditText
            style="@style/received_referral_common_Textstyle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/editTextMessageComment"
            android:layout_width="fill_parent"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:padding="5dp"
            android:layout_height="120dp"
            android:background="@drawable/bg_white_corner_gray_input"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            style="@style/received_referral_common_Textstyle"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/llPostComment"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_next"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <com.app.foxhopr.custom.view.RegularTextView
                android:id="@+id/txtvNextReferrals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/str_post_text"
                style="@style/NextTextStyle"
                />

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>